samples/_failures_safe/1761414496_fac014_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40e4e234.c: In function ‘process_compression’:
./samples/SAFE/__tmp_40e4e234.c:169:12: error: missing terminating " character
  169 |     printf("\
      |            ^~
./samples/SAFE/__tmp_40e4e234.c:169:5: error: expected expression at end of input
  169 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_40e4e234.c:169:5: error: expected declaration or statement at end of input
